--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "a little test app",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1"
   },
